Update my directory structure for God Github

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     },
     "scripts": {
         "build": "npm run build:copy_index & npm run build:copy_favicon & npm run build:copy_animatecss & npm run build:build_css",
-        "build:copy_index": "cp src/index.html public/index.html",
-        "build:copy_favicon": "cp src/favicon.ico public/favicon.ico",
-        "build:copy_animatecss": "cp node_modules/animate.css/animate.min.css public/css/",
-        "build:build_css": "npx tailwindcss --input src/css/tailwind.css --output public/css/style.css --minify",
-        "serve": "npx http-server public/ -p 3133"
+        "build:copy_index": "cp src/index.html docs/index.html",
+        "build:copy_favicon": "cp src/favicon.ico docs/favicon.ico",
+        "build:copy_animatecss": "cp node_modules/animate.css/animate.min.css docs/css/",
+        "build:build_css": "npx tailwindcss --input src/css/tailwind.css --output docs/css/style.css --minify",
+        "serve": "npx http-server docs/ -p 3133"
     }
 }
